Handle grouping of prefixes within extract query planning